# FlexUI

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  main.qml  qml.qrc  resources.qrc
android/: AndroidManifest.xml
android/qt/: AndroidGamepadBridge.cpp  AndroidGamepadBridge.h  AndroidPermission.cpp  AndroidPermissions.h
android/src/com/btb/AndroidCanController/: GamepadBridge.java  QtActivity.java
common/: CMakeLists.txt  ConnectionHandler.h  ControllerAgent.cpp  ControllerAgent.h  Enums.h  RateLimiter.cpp  RateLimiter.h
common/BLE/: BLE.h  BLEGattClient.cpp  BLEGattClient.h  CMakeLists.txt  Device.cpp  Device.h  DeviceCommandExecuter.cpp  DeviceCommandExecuter.h  DeviceController.cpp  DeviceController.h  DeviceListModel.cpp  DeviceListModel.h  DeviceScanner.cpp  DeviceScanner.h
common/Service/: AbstractService.h  MotorService.h  SteeringService.h
qml/: TabBluetoothDiscovery.qml  TabController.qml
qml/bluetooth_discovery/components/: DeviceItem.qml  DeviceItemUI.ui.qml  DeviceList.qml
qml/bluetooth_discovery/sections/: Body.qml  Header.qml
qml/components/: BluetoothDeviceIcon.qml  Header.qml
qml/controller/: JoystickControl.qml  QMLGamepad.cpp  QMLGamepad.h  QMLGamepad.qml  QMLGamepadUI.ui.qml
sdl/: SDLGamepadBridge.cpp  SDLGamepadBridge.h
